# fast-bind

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  build-linux-docker.ps1  build.ps1
.github/workflows/: build.yml
src/: app.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  notes.rs  performance.rs  ssh.rs  state.rs  validation.rs
src/ui/: components.rs  mod.rs  panel_actions.rs  panels.rs  theme.rs  windows.rs
tests/: app_state_tests.rs  common.rs  file_operations_tests.rs  notes_tests.rs  ui_integration_tests.rs
