[package]
name = "fast-bind"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"  # egui framework
egui = "0.31.1"    # GUI library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clipboard = "0.5"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rfd = "0.12"       # для диалоговых окон
dirs = "5.0"       # для работы с домашней директорией

[dev-dependencies]
tempfile = "3.8"   # для создания временных директорий в тестах

# Оптимизации для release сборки
[profile.release]
lto = true          # Link Time Optimization - уменьшает размер бинарника
strip = true        # Удаляет отладочную информацию
panic = "abort"     # Прерывать программу при панике вместо раскручивания стека
codegen-units = 1   # Улучшает оптимизацию за счет времени компиляции
opt-level = 3       # Максимальная оптимизация

# Дополнительные оптимизации размера для Linux
[profile.release.package."*"]
opt-level = 3
debug = false
