[package]
name = "fast-bind"
version = "0.0.4"
edition = "2024"

# Дополнительные возможности для сборки
[features]
default = []
console = []  # Включает консольное окно даже в release-сборке (для отладки и снижения подозрительности)

[dependencies]
eframe = "0.31.1"  # egui framework
egui = "0.31.1"    # GUI library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"       # для работы с домашней директорией
log = "0.4"        # система логирования
env_logger = "0.10" # реализация логирования

[dev-dependencies]
tempfile = "3.8"   # для создания временных директорий в тестах

# Build dependencies для компиляции ресурсов Windows
[build-dependencies]
winres = "0.1"     # Для встраивания версионной информации и иконки в Windows

# Оптимизации для release сборки
[profile.release]
lto = "thin"        # Более мягкая LTO оптимизация вместо полной
# strip = true      # Закомментируем для сохранения отладочной информации
panic = "abort"     # Прерывать программу при панике вместо раскручивания стека
codegen-units = 1   # Улучшает оптимизацию за счет времени компиляции
opt-level = 3       # Максимальная оптимизация

# Дополнительные оптимизации размера
[profile.release.package."*"]
opt-level = 3
debug = true        # Оставляем отладочную информацию
